Creado mediante Colaboratory

--- a/prediccion_ventas.ipynb
+++ b/prediccion_ventas.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "name": "prediccion_ventas.ipynb",
       "provenance": [],
-      "mount_file_id": "1vE9RGGJkZYFjFJX8VZjLWSbaAQNFPSdQ",
-      "authorship_tag": "ABX9TyNFPU4/WUif1iRwGoAJaYh5",
+      "mount_file_id": "https://github.com/bbalbo/prediccion-de-ventas/blob/main/prediccion_ventas.ipynb",
+      "authorship_tag": "ABX9TyOjk7bmSetKtAAR9rn54LBs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "HZ3LaZvBgDX7"
       },
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "HVko1kXUgI8X"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "id": "4Ex6h4nOgtPq",
         "outputId": "bf6cce43-d520-41b8-c333-e82c2430fe21"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,6 +294,170 @@
           "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.shape"
+      ],
+      "metadata": {
+        "id": "T57z-JYQEXiX",
+        "outputId": "e082b988-a507-4559-bb04-229616431a37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8523, 12)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "jAsymWriEjlP",
+        "outputId": "41ab0771-4b43-4aed-b75e-d49e9eb0b50a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Item_Identifier               object\n",
+              "Item_Weight                  float64\n",
+              "Item_Fat_Content              object\n",
+              "Item_Visibility              float64\n",
+              "Item_Type                     object\n",
+              "Item_MRP                     float64\n",
+              "Outlet_Identifier             object\n",
+              "Outlet_Establishment_Year      int64\n",
+              "Outlet_Size                   object\n",
+              "Outlet_Location_Type          object\n",
+              "Outlet_Type                   object\n",
+              "Item_Outlet_Sales            float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.isna().sum()"
+      ],
+      "metadata": {
+        "id": "TRD_lA5mElf_",
+        "outputId": "e65dc711-fefa-4eb7-85c2-29f0f310db21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Item_Identifier                 0\n",
+              "Item_Weight                  1463\n",
+              "Item_Fat_Content                0\n",
+              "Item_Visibility                 0\n",
+              "Item_Type                       0\n",
+              "Item_MRP                        0\n",
+              "Outlet_Identifier               0\n",
+              "Outlet_Establishment_Year       0\n",
+              "Outlet_Size                  2410\n",
+              "Outlet_Location_Type            0\n",
+              "Outlet_Type                     0\n",
+              "Item_Outlet_Sales               0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.Item_Weight=df.Item_Weight.fillna(df.Item_Weight.mean())\n",
+        "\n",
+        "# The average was considered to fill in the missing data."
+      ],
+      "metadata": {
+        "id": "QhwXC_5pF1EA"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.isna().sum()"
+      ],
+      "metadata": {
+        "id": "ubWRpaqGGB1n",
+        "outputId": "7db574d4-b8aa-4367-aed0-ba1813d96ca2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Item_Identifier                 0\n",
+              "Item_Weight                     0\n",
+              "Item_Fat_Content                0\n",
+              "Item_Visibility                 0\n",
+              "Item_Type                       0\n",
+              "Item_MRP                        0\n",
+              "Outlet_Identifier               0\n",
+              "Outlet_Establishment_Year       0\n",
+              "Outlet_Size                  2410\n",
+              "Outlet_Location_Type            0\n",
+              "Outlet_Type                     0\n",
+              "Item_Outlet_Sales               0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "OrSn6fJIGKRr"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
