Creado mediante Colaboratory

--- a/pipeline_2.ipynb
+++ b/pipeline_2.ipynb
@@ -6,8 +6,8 @@
       "name": "pipeline_2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "mount_file_id": "1431zz3ViTQYcpVymFfGJ4V2u5bNEsUuD",
-      "authorship_tag": "ABX9TyOf4OW/0SKo4ckY2RBi5EZc",
+      "mount_file_id": "https://github.com/bbalbo/prediccion-de-ventas/blob/main/pipeline_2.ipynb",
+      "authorship_tag": "ABX9TyM9XPweD/KYvpBwaw/D4K2T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,29 +37,31 @@
         "import numpy as np\n",
         "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder, OrdinalEncoder\n",
         "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
         "from sklearn.compose import make_column_transformer, make_column_selector\n",
         "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn import set_config\n",
+        "from sklearn.metrics import mean_squared_error\n",
         "from sklearn import set_config\n",
         "set_config(display='diagram')\n"
       ],
       "metadata": {
         "id": "23kt6UQNhR5W"
       },
-      "execution_count": 65,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 662
         },
         "id": "2cBWFLkehO8Y",
-        "outputId": "974273e7-844d-4c35-d22f-282de90a29f1"
+        "outputId": "36d202a3-6f20-43d3-a153-9a2888e06550"
       },
       "outputs": [
         {
@@ -122,7 +124,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fd24e203-ce90-41d4-b510-3412689f00ed\">\n",
+              "  <div id=\"df-f328c98a-5f5b-445c-b75b-1922d9ba0eb9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -326,7 +328,7 @@
               "</table>\n",
               "<p>8523 rows × 12 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd24e203-ce90-41d4-b510-3412689f00ed')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f328c98a-5f5b-445c-b75b-1922d9ba0eb9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -377,12 +379,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fd24e203-ce90-41d4-b510-3412689f00ed button.colab-df-convert');\n",
+              "          document.querySelector('#df-f328c98a-5f5b-445c-b75b-1922d9ba0eb9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fd24e203-ce90-41d4-b510-3412689f00ed');\n",
+              "          const element = document.querySelector('#df-f328c98a-5f5b-445c-b75b-1922d9ba0eb9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -405,7 +407,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 5
         }
       ],
       "source": [
@@ -423,9 +425,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1RfrTsLqk3gM",
-        "outputId": "dbbf8d35-c378-4d06-96d7-f2c452433503"
+        "outputId": "bda9af25-c407-48b6-9aa2-b4ac3663f81c"
       },
-      "execution_count": 67,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +442,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 6
         }
       ]
     },
@@ -453,7 +455,7 @@
       "metadata": {
         "id": "SvcUWY7lrO09"
       },
-      "execution_count": 68,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -468,9 +470,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pU3jFCSTk_oe",
-        "outputId": "b8ce0418-ea13-4caf-8a9f-da6cb761e9c0"
+        "outputId": "0eb363b3-788a-4341-bf93-a75b86276ec5"
       },
-      "execution_count": 69,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -482,7 +484,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 8
         }
       ]
     },
@@ -496,7 +498,7 @@
       "metadata": {
         "id": "Ezduo8OdhuF7"
       },
-      "execution_count": 70,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -510,9 +512,9 @@
           "height": 424
         },
         "id": "st79HIsmqvV0",
-        "outputId": "e24e190a-1e9c-4678-8a08-393783da298a"
+        "outputId": "9aad491f-c795-43f2-a947-12d6c37ce1ea"
       },
-      "execution_count": 71,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +550,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-97f4645d-a992-45bb-a187-21f7a9956488\">\n",
+              "  <div id=\"df-d9e301f3-a51b-4003-b5ee-dc655fdf9857\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -704,7 +706,7 @@
               "</table>\n",
               "<p>8523 rows × 8 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97f4645d-a992-45bb-a187-21f7a9956488')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d9e301f3-a51b-4003-b5ee-dc655fdf9857')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -755,12 +757,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-97f4645d-a992-45bb-a187-21f7a9956488 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d9e301f3-a51b-4003-b5ee-dc655fdf9857 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-97f4645d-a992-45bb-a187-21f7a9956488');\n",
+              "          const element = document.querySelector('#df-d9e301f3-a51b-4003-b5ee-dc655fdf9857');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -783,7 +785,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 10
         }
       ]
     },
@@ -796,7 +798,7 @@
       "metadata": {
         "id": "-PTM7Qk2iJbV"
       },
-      "execution_count": 72,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -809,9 +811,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g6k0DGvrimrt",
-        "outputId": "91788624-41cd-42ff-d245-92b0d25f5e2b"
+        "outputId": "99033bfa-8386-4e8a-b7c0-aabc21630a09"
       },
-      "execution_count": 73,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -824,7 +826,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 12
         }
       ]
     },
@@ -838,9 +840,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-OM_ihJGi9Dz",
-        "outputId": "063c0d4e-37d0-429c-aed9-113bd0b63f99"
+        "outputId": "0d338353-dcce-4a76-bb00-2396a04856c1"
       },
-      "execution_count": 74,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -881,9 +883,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hma99Dq5jdH5",
-        "outputId": "666ddc80-83e6-4ae6-9bac-a5a77aec8bed"
+        "outputId": "9ba2e9fa-ce78-4d92-92f5-db896ab82a57"
       },
-      "execution_count": 75,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -897,7 +899,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 75
+          "execution_count": 14
         }
       ]
     },
@@ -912,9 +914,9 @@
           "height": 424
         },
         "id": "RAE2OQUx6yl2",
-        "outputId": "518d5d95-29ae-4278-8c99-15132642286d"
+        "outputId": "ef89544e-eb85-43e8-de66-371df57ece20"
       },
-      "execution_count": 76,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +952,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-df89bd60-91a4-491e-a5f7-ec6766d7ff11\">\n",
+              "  <div id=\"df-9c378c98-5be3-42ab-8a45-ddf8e68f9f02\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1106,7 +1108,7 @@
               "</table>\n",
               "<p>6392 rows × 8 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-df89bd60-91a4-491e-a5f7-ec6766d7ff11')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c378c98-5be3-42ab-8a45-ddf8e68f9f02')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1157,12 +1159,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-df89bd60-91a4-491e-a5f7-ec6766d7ff11 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9c378c98-5be3-42ab-8a45-ddf8e68f9f02 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-df89bd60-91a4-491e-a5f7-ec6766d7ff11');\n",
+              "          const element = document.querySelector('#df-9c378c98-5be3-42ab-8a45-ddf8e68f9f02');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1185,7 +1187,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 15
         }
       ]
     },
@@ -1214,7 +1216,7 @@
       "metadata": {
         "id": "J1sq1RyCM96v"
       },
-      "execution_count": 77,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1227,7 +1229,7 @@
       "metadata": {
         "id": "LWwtHEQ_RL1M"
       },
-      "execution_count": 78,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1240,7 +1242,7 @@
       "metadata": {
         "id": "pWWwKdgpNaqN"
       },
-      "execution_count": 79,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1251,7 +1253,7 @@
       "metadata": {
         "id": "t29mgKpbN-3G"
       },
-      "execution_count": 80,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1264,7 +1266,7 @@
       "metadata": {
         "id": "g3Q-COtjOLM0"
       },
-      "execution_count": 81,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1278,9 +1280,9 @@
           "height": 424
         },
         "id": "N2w7SLPoUKKg",
-        "outputId": "940e7dbc-cd8e-459f-b609-f6c1999d01bb"
+        "outputId": "b19e3c9b-3bba-42d1-fd0f-4f330f1cb3a6"
       },
-      "execution_count": 85,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1316,7 +1318,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7a449dd4-b3c0-48cb-b396-d0e577be28b4\">\n",
+              "  <div id=\"df-e123a4fd-d57d-49d2-9175-d6e6a4da9a21\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1628,7 +1630,7 @@
               "</table>\n",
               "<p>6392 rows × 28 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7a449dd4-b3c0-48cb-b396-d0e577be28b4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e123a4fd-d57d-49d2-9175-d6e6a4da9a21')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1679,12 +1681,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7a449dd4-b3c0-48cb-b396-d0e577be28b4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e123a4fd-d57d-49d2-9175-d6e6a4da9a21 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7a449dd4-b3c0-48cb-b396-d0e577be28b4');\n",
+              "          const element = document.querySelector('#df-e123a4fd-d57d-49d2-9175-d6e6a4da9a21');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1707,7 +1709,87 @@
             ]
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Modelo de Regresión"
+      ],
+      "metadata": {
+        "id": "k-spSHZmOcIO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg=LinearRegression()\n",
+        "reg.fit(X_train_imputed,y_train)\n",
+        "print(reg.score(X_train_imputed,y_train))\n",
+        "print(reg.score(X_test_imputed,y_test))\n",
+        "print(np.sqrt(mean_squared_error(y_train,reg.predict(X_train_imputed))))\n",
+        "print(np.sqrt(mean_squared_error(y_test,reg.predict(X_test_imputed))))"
+      ],
+      "metadata": {
+        "id": "UKJbSzw_OgTT",
+        "outputId": "56e8b8d7-9af4-4687-dcc0-54fb9ea8c7b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.5605748930349453\n",
+            "0.5658450033049149\n",
+            "1140.3767533231833\n",
+            "1094.451358110315\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Modelo de Arbol de Regresión"
+      ],
+      "metadata": {
+        "id": "VMjafG5UPnGn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dec_tree=DecisionTreeRegressor(random_state=42, max_depth=9)\n",
+        "dec_tree.fit(X_train_imputed,y_train)\n",
+        "print(dec_tree.score(X_train_imputed,y_train))\n",
+        "print(dec_tree.score(X_test_imputed,y_test))\n",
+        "print(np.sqrt(mean_squared_error(y_train,dec_tree.predict(X_train_imputed))))\n",
+        "print(np.sqrt(mean_squared_error(y_test,dec_tree.predict(X_test_imputed))))"
+      ],
+      "metadata": {
+        "id": "qCEOqCPWPtxP",
+        "outputId": "e5ef0eef-ed17-44cd-d78c-ae131456d7b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.6636092399790507\n",
+            "0.5527563185347324\n",
+            "997.7642776197305\n",
+            "1110.8263407381494\n"
+          ]
         }
       ]
     }
