Creado mediante Colaboratory

--- a/pipeline_2.ipynb
+++ b/pipeline_2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "https://github.com/bbalbo/prediccion-de-ventas/blob/main/pipeline_2.ipynb",
-      "authorship_tag": "ABX9TyM9XPweD/KYvpBwaw/D4K2T",
+      "authorship_tag": "ABX9TyMTPFa8pNHveaQNYKiV4qpj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1733,11 +1733,11 @@
         "print(np.sqrt(mean_squared_error(y_test,reg.predict(X_test_imputed))))"
       ],
       "metadata": {
-        "id": "UKJbSzw_OgTT",
-        "outputId": "56e8b8d7-9af4-4687-dcc0-54fb9ea8c7b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UKJbSzw_OgTT",
+        "outputId": "56e8b8d7-9af4-4687-dcc0-54fb9ea8c7b2"
       },
       "execution_count": 30,
       "outputs": [
@@ -1773,11 +1773,11 @@
         "print(np.sqrt(mean_squared_error(y_test,dec_tree.predict(X_test_imputed))))"
       ],
       "metadata": {
-        "id": "qCEOqCPWPtxP",
-        "outputId": "e5ef0eef-ed17-44cd-d78c-ae131456d7b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qCEOqCPWPtxP",
+        "outputId": "e5ef0eef-ed17-44cd-d78c-ae131456d7b8"
       },
       "execution_count": 42,
       "outputs": [
@@ -1792,6 +1792,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Se recomienda utilizar el modelo de árbol de regresión por sobre el de regresión regresión lineal en este caso"
+      ],
+      "metadata": {
+        "id": "k_jeQ0H9QdDU"
+      }
     }
   ]
 }
